# coda-code-assistant

./: .coveragerc  .dockerignore  .gitignore  .gitmessage  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  REFACTORING_STATUS.md  ROADMAP.md  TEST_PLAN.md  TOOL_SUPPORT_TEST_RESULTS.md  TROUBLESHOOTING.md  demo_intelligence.py  docker-compose.yml  example_intel_session.md  mcp.json  oci_tool_test_results_20250715_150844.json  pyproject.toml  pytest-parallel.ini  refactoring_integration_analysis.md  run_tests.sh  test_agent_debug.py  test_agent_interactive.py  test_agent_models.py  test_oci_provider.py  test_simple_agent.py  vector_search_demo.py
.github/: dependabot.yml
.github/workflows/: ci-main.yml  ci-optimized.yml  collect-metrics.yml  docker-build.yml  docker-conditional.yml  quality-checks.yml  release.yml  test-agents.yml  test-fast.yml  test-observability.yml  test-oci-genai.yml  test-selector.yml  test-tui.yml  test-web-ui.yml  test-with-ollama.yml  test.yml
archive/old_tests/: test_config_independence.py
assets/logos/: LOGO_USAGE.md
coda/: __version__.py  chunking.py  configuration.py  constants.py  semantic_search.py  semantic_search_coda.py  semantic_search_standalone.py  themes.py
coda/agents/: __init__.py  agent.py  builtin_tools.py  decorators.py  function_tool.py  intelligence_tools.py  tool_adapter.py  types.py
coda/base/: __init__.py
coda/cli/: __init__.py  agent_chat.py  basic_commands.py  chat_session.py  cli.py  command_registry.py  commands_config.yaml  completers.py  error_handler.py  generic_selector.py  interactive.py  interactive_cli.py  interfaces.py  main.py  model_selector.py  provider_manager.py  search_display.py  textual_command_palette.py  textual_integrated.py  theme_selector.py  tool_chat.py  tui_cli.py  tui_integrated.py  web_command.py
coda/config/: README.md  __init__.py  example.py  manager.py  models.py
coda/constants/: README.md  __init__.py  definitions.py  example.py  models.py
coda/embeddings/: __init__.py  base.py  factory.py  mock.py  oci.py  oci_coda.py  oci_constants.py  oci_standalone.py  oci_wrapper.py  ollama.py  sentence_transformers.py
coda/intelligence/: __init__.py  cli.py  dependency_graph.py  example.py  repo_map.py  tree_sitter_analyzer.py  tree_sitter_query_analyzer.py
coda/observability/: __init__.py  base.py  collections.py  commands.py  decorators.py  error_tracker.py  health.py  manager.py  metrics.py  profiler.py  sanitizer.py  scheduler.py  security.py  storage.py  tracing.py
coda/providers/: __init__.py  base.py  constants.py  example.py  litellm_provider.py  mock_provider.py  oci_genai.py  ollama_provider.py  registry.py  utils.py
coda/services/: README.md  __init__.py  errors.py
coda/session/: __init__.py  commands.py  context.py  database.py  manager.py  models.py
coda/theme/: __init__.py  example.py
coda/tools/: __init__.py  base.py  executor.py  file_tools.py  git_tools.py  intelligence_tools.py  mcp_server.py  permissions.py  session_storage.py  shell_tools.py  web_tools.py
coda/vector_stores/: __init__.py  base.py  faiss_store.py
coda/web/: __init__.py  app.py  app_minimal.py  app_simple.py
docker/: README.md  entrypoint-dev.sh  entrypoint.sh
docs/: ARCHITECTURE_DOCUMENTATION_PLAN.md  README.md  code-review-refactor-branch.md  modes.md  monitoring-guide.md  oci-genai-integration.md  test-coverage-requirements.md  testing-tui.md
docs/api/: config.md
docs/development/: RELEASE.md
docs/guides/: diagram-rendering.md
docs/plans/: ARCHITECTURE_DOCUMENTATION_PLAN.md  README.md  fix-failing-ci-checks.md
docs/research/: agent-architecture-analysis.md  agent-comparison-matrix.md
docs/templates/: MODULE_ARCHITECTURE_TEMPLATE.md  README.md
docs/wiki-staging/: README.md  feature-branch-readme.md  tree-sitter-examples.md  tree-sitter-intelligence-design.md  tree-sitter-intelligence-usage.md
examples/: agent_example.py  config.example.toml  demo_oci.py  demo_ollama.py  litellm_oci_integration_example.py  oci_genai_list_models_example.py  oci_genai_model_discovery.py  test_search_ui.py
examples/semantic_search/: basic_search.py  code_indexing.py  mock_provider_demo.py
examples/textual/: README.md  basic_interface_test.py  connection_test.py  mock_provider_demo.py  scroll_test.py
examples/tui/: basic_interface_test.py  connection_test.py  ctrl_p_test.py  final_input_test.py  input_test.py  mock_provider_demo.py  scroll_test.py  simple_ctrl_p_test.py  tab_completion_test.py
scripts/: analyze_coverage.py  check_oci_genai.py  collect_ci_metrics.py  debug_model_mapping.py  generate_logo_assets.py  generate_metrics_dashboard.py  install-git-hooks.sh  select_tests.py  setup_oci.py  show_available_models.py  test_metrics_collector.py  test_oci_provider.py  test_tool_storage.py  test_with_ollama.sh  track_test_performance.py  update_version.py
tests/: README.md  __init__.py  conftest.py  conftest_performance.py  test_agent.py  test_chunking.py  test_config_independence.py  test_embedding_providers.py  test_interactive_mode.py  test_oci_genai_basic.py  test_oci_tool_calling.py  test_semantic_search.py  test_smoke.py  test_theme_colors.py  test_tool_calling.py  test_tools.py  test_tui_interface.py  test_tui_smoke.py  test_version.py
tests/agents/: test_agent_coverage.py  test_agent_tool_integration.py  test_builtin_tools.py  test_decorators.py  test_function_tool.py  test_intelligence_tools.py  test_tool_adapter.py
tests/apps/: test_cli_integration.py  test_completion_selector.py  test_generic_command_selector.py  test_interactive_selector.py  test_selector_unit.py
tests/base/: __init__.py  test_module_independence.py  test_standalone_imports.py
tests/cli/: test_agent_chat_workflow.py  test_basic_commands.py  test_chat_session.py  test_cli_completion.py  test_cli_interrupt.py  test_completers.py  test_generic_selector.py  test_help_regressions.py  test_interactive.py  test_interactive_cli.py  test_interactive_cli_coverage.py  (+11 more)
(+332 files in other folders)
